<resources>
    <string name="app_name">Nutrition Helper</string>
    <string name="title_activity_launcher">Nutrition Helper</string>
    <string name="channel_name">NutritionHelper Channel</string>
    <string name="channel_description">Notification Channel for NutritionHelper</string>
    <string name="button_add_food_to_intake">Add Food</string>
    <string name="button_remove_food_from_intake">Remove Food</string>
    <string name="button_set_daily_goals">Goals</string>
    <string name="daily_food_intake">Daily food intake</string>
    <string name="main_activity_title">Today\'s Nutrition</string>
    <string name="main_activity_logo_description">Logo</string>
    <string name="intake_name">Food</string>
    <string name="intake_time">Time</string>
    <string name="intake_calories">Calories</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_edit_food">Edit</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_calories">Calories</string>
    <string name="lbl_protein">Protein</string>
    <string name="lbl_carbohydrates">Carbohydrates</string>
    <string name="lbl_fat">Fat</string>
    <string name="title_create_edit_food">Create/Edit Food</string>
    <string name="title_set_daily_goals_limits">Set Daily Goals/Limits</string>
    <string name="title_goals">Goals</string>
    <string name="title_limits">Limits</string>
    <string name="lbl_units_kj">kj</string>
    <string name="lbl_units_g">g</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_calories_short">Cals</string>
    <string name="lbl_carbohydrates_short">Carbs</string>
</resources>