<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyGoalsLimitsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_create_edit_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/title_set_daily_goals_limits"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_create_edit_food">

            <LinearLayout
                android:id="@+id/set_daily_goals_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="5dp">

                <TextView
                    android:id="@+id/title_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="-10dp"
                    android:text="@string/title_goals"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/lbl_goals_calories"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_calories" />

                    <EditText
                        android:id="@+id/txt_goals_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:ems="10"
                        android:hint="@string/lbl_calories"
                        android:inputType="text"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_kj" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/lbl_goals_protein"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_protein" />

                    <EditText
                        android:id="@+id/txt_goals_protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:digits="0123456789"
                        android:ems="10"
                        android:hint="@string/lbl_protein"
                        android:inputType="numberSigned"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_g" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/lbl_goals_carbohydrates"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_carbohydrates" />

                    <EditText
                        android:id="@+id/txt_goals_carbohydrates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:digits="0123456789."
                        android:ems="10"
                        android:hint="@string/lbl_carbohydrates"
                        android:inputType="numberDecimal"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_g" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/lbl_goals_fat"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_fat" />

                    <EditText
                        android:id="@+id/txt_goals_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:ems="10"
                        android:hint="@string/lbl_fat"
                        android:inputType="numberDecimal"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_g" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_limits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:layout_marginHorizontal="-10dp"
                    android:text="@string/title_limits"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/lbl_limits_calories"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_calories" />

                    <EditText
                        android:id="@+id/txt_limits_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:ems="10"
                        android:hint="@string/lbl_calories"
                        android:inputType="text"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_kj" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/lbl_limits_protein"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_protein" />

                    <EditText
                        android:id="@+id/txt_limits_protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:digits="0123456789"
                        android:ems="10"
                        android:hint="@string/lbl_protein"
                        android:inputType="numberSigned"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_g" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/lbl_limits_carbohydrates"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_carbohydrates" />

                    <EditText
                        android:id="@+id/txt_limits_carbohydrates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:digits="0123456789."
                        android:ems="10"
                        android:hint="@string/lbl_carbohydrates"
                        android:inputType="numberDecimal"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_g" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/lbl_limits_fat"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_fat" />

                    <EditText
                        android:id="@+id/txt_limits_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@color/input"
                        android:ems="10"
                        android:hint="@string/lbl_fat"
                        android:inputType="numberDecimal"
                        android:minHeight="26sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_units_g" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_daily_goals_limits_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/positive"
            android:maxLines="1"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_daily_goals_limits_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/negative"
            android:maxLines="1"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>